--- a/index.html
+++ b/index.html
@@ -389,22 +389,56 @@ fill`);
 
         // SVG 저장 함수
         function exportToSVG() {
-            const preview = document.getElementById('barcodePreview');
-            const barcodeNumber = document.getElementById('barcodeNumber').value;
-            
-            if (!preview.innerHTML) {
-                alert('먼저 바코드를 생성해주세요.');
-                return;
+    const preview = document.getElementById('barcodePreview');
+    const barcodeNumber = document.getElementById('barcodeNumber').value;
+    
+    if (!preview.innerHTML) {
+        alert('먼저 바코드를 생성해주세요.');
+        return;
+    }
+
+    try {
+        const canvas = preview.querySelector('canvas');
+        if (!canvas) {
+            throw new Error('바코드를 찾을 수 없습니다.');
+        }
+
+        // 캔버스의 이미지 데이터를 직접 가져옴
+        const ctx = canvas.getContext('2d');
+        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        const data = imageData.data;
+        let paths = [];
+        let currentX = 0;
+        let isBar = false;
+
+        // 현재 캔버스의 바코드를 직접 벡터로 변환
+        for (let x = 0; x < canvas.width; x++) {
+            let hasBlackPixel = false;
+            for (let y = 0; y < canvas.height; y++) {
+                const idx = (y * canvas.width + x) * 4;
+                if (data[idx] === 0) {
+                    hasBlackPixel = true;
+                    break;
+                }
             }
 
-            try {
-                const canvas = preview.querySelector('canvas');
-                const productName = document.getElementById('productName').value;
-                const productNameEng = document.getElementById('productNameEng').value;
-                const productNumber = document.getElementById('productNumber').value;
-                const lotNumber = document.getElementById('lotNumber').value;
+            if (hasBlackPixel && !isBar) {
+                currentX = x;
+                isBar = true;
+            } else if ((!hasBlackPixel || x === canvas.width - 1) && isBar) {
+                const barWidth = x - currentX;
+                paths.push(`M ${currentX} 0 h ${barWidth} v ${canvas.height} h -${barWidth} Z`);
+                isBar = false;
+            }
+        }
 
-                const svgData = `<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+        const productName = document.getElementById('productName').value;
+        const productNameEng = document.getElementById('productNameEng').value;
+        const productNumber = document.getElementById('productNumber').value;
+        const lotNumber = document.getElementById('lotNumber').value;
+
+        // SVG 생성
+        const svgData = `<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 <svg xmlns="http://www.w3.org/2000/svg" 
      version="1.1"
@@ -419,25 +453,25 @@ fill`);
         <text x="0" y="45">로트번호: ${lotNumber}</text>
     </g>
     <g id="Barcode" transform="translate(0, 60)">
-        <path d="${generateBarcodeVectorPathSVG(barcodeNumber)}" fill="black"/>
+        <path d="${paths.join(' ')}" fill="black"/>
         <text x="${canvas.width/2}" y="${canvas.height + 15}" text-anchor="middle" font-family="monospace">${barcodeNumber}</text>
     </g>
 </svg>`;
 
-                const blob = new Blob([svgData], { type: 'image/svg+xml;charset=utf-8' });
-                const url = URL.createObjectURL(blob);
-                const link = document.createElement('a');
-                link.href = url;
-                link.download = `${barcodeNumber}.svg`;
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
-                URL.revokeObjectURL(url);
-            } catch (error) {
-                console.error(error);
-                alert('SVG 저장 중 오류가 발생했습니다.');
-            }
-        }
+        const blob = new Blob([svgData], { type: 'image/svg+xml;charset=utf-8' });
+        const url = URL.createObjectURL(blob);
+        const link = document.createElement('a');
+        link.href = url;
+        link.download = `${barcodeNumber}.svg`;
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+        URL.revokeObjectURL(url);
+    } catch (error) {
+        console.error(error);
+        alert('SVG 저장 중 오류가 발생했습니다.');
+    }
+}
 
         // EPS 저장 함수
         function exportToEPS() {
