--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         }
 
         button {
-            background-color: #007bff;
+            background-color: #00ffdd;
             color: white;
             border: none;
             padding: 12px 24px;
